<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/map_normal"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42dp">
            <ImageView
                android:id="@+id/iv_back"
                android:onClick="toBack"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_back"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="隐私政策"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textStyle="bold"
                />
        </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_txt1"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
       android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_txt2"
        android:textSize="16sp"
        android:layout_margin="6dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_txt3"
        android:textSize="16sp"
        android:layout_margin="6dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_txt4"
        android:textSize="16sp"
        android:layout_margin="6dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_txt5"
        android:textSize="16sp"
        android:layout_margin="6dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_txt6"
        android:textSize="16sp"
        android:layout_margin="6dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_txt7"
        android:textSize="16sp"
        android:layout_margin="6dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_txt8"
        android:textSize="16sp"
        android:layout_margin="6dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_txt9"
        android:textSize="16sp"
        android:layout_margin="6dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_txt10"
        android:textSize="16sp"
        android:layout_margin="6dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_txt11"
        android:textSize="16sp"
        android:layout_margin="6dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_txt12"
        android:textSize="16sp"
        android:layout_margin="6dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_txt13"
        android:textSize="16sp"
        android:layout_margin="6dp"
        />
    </LinearLayout>
</ScrollView>